[package]
name = "slbench"
version = "0.1.0"
authors = ["michael storm angerman"]
edition = "2021"
default-run = "gen_insert"

[dependencies]
arrow = { version = "39.0.0", features = ["prettyprint"] }
clap = { version = "4.3", features = ["derive"] }
csv = "1.2"
datafusion = "25.0.0"
env_logger = "0.10"
futures = "0.3"
mimalloc = { version = "0.1", optional = true, default-features = false }
num_cpus = "1.13.0"
parquet = { version = "39.0.0", features = ["arrow", "async", "object_store"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
snmalloc-rs = { version = "0.3", optional = true }
structopt = { version = "0.3", default-features = false }
#test-utils = { path = "../test-utils/", version = "0.1.0" }
tokio = { version = "^1.0", features = ["macros", "rt", "rt-multi-thread", "parking_lot"] }

[dev-dependencies]
datafusion-proto = "25.0.0"
